[project]
name = "br-market-calendar"
version = "0.2.2"
description = "Brazilian financial market calendar utilities for business days, holidays, and date operations."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Marcelo G. Facioli", email = "mgfacioli@yahoo.com.br" }
]
keywords = [
    "brazil",
    "financial-calendar",
    "business-days",
    "holidays",
    "anbima",
    "dates",
    "calendar"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
pandas = [
    "pandas>=2.2",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.10",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "xlrd>=2.0",
]
excel = [
    "pandas>=2.2",
    "openpyxl>=3.1",
    "xlrd>=2.0",
]

[project.urls]
Homepage = "https://github.com/mgfacioli/br-market-calendar"
Repository = "https://github.com/mgfacioli/br-market-calendar"
Issues = "https://github.com/mgfacioli/br-market-calendar/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=br_market_calendar --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["br_market_calendar"]
